Fixed typo in Experience

--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -70,7 +70,7 @@
 \section{Experience}
   \cventry{Jun 2018 -- Present}{Assistant Researcher}{Department of Computer Science}{Montclair, NJ}{}{
     \begin{itemize}
-      \item Devised deep feedforward neural network to accurately detect up to four intrustions on time series data with a 98\% verification score
+      \item Devised Deep Feedforward Neural Network to accurately detect up to four intrusions on time series data with a 98\% verification score
       \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow API and Keras API in Python
       \item Expedited development of algorithm by gathering large collections of viable data and preprocessing data for compatibility
     \end{itemize}
