added details and changed order of sections

--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -42,6 +42,20 @@
        \item Blockchain Club, founding member
      \end{itemize}
   }
+\section{Experience}
+  \cventry{Jun 2018 -- Present}{Assistant Researcher}{Department of Computer Science}{Montclair, NJ}{}{
+    \begin{itemize}
+      \item Devised main Deep Feedforward Neural Network to accurately detect up to four intrusions on time series data with a 98\% verification score 
+      \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow API and Keras API in Python
+      \item Expedited development of algorithm by gathering large collections of viable data and preprocessing data for compatibility
+    \end{itemize}
+ }
+ \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
+   \begin{itemize}
+    \item Developed Web Application that keeps track of each employees hours by using Twilio's API to send and receive text messages alerting users to log in time
+    \item Utilizes Google Spreadsheet's API to store each employees hours which is currently used by every employee 
+  \end{itemize}
+}
 \section{Skills} 
   \cvline{Languages:}{Java, Python, Javascript, HTML, CSS}
   \cvline{Tools:}{React.js, Node.js, Express.js, PostgreSQL, Git/GitHub}
@@ -49,37 +63,25 @@
 \section{Projects}
   \cventry{Aug 2018 - Nov 2018}{Face Detection App}{Personal}{}{}{
    \begin{itemize}
-    \item Engineered full stack website that allows users to submit a url of an image and returns a picture with all faces identified
+    \item Engineered full stack website using React, Node, Express and PostgreSQL. The application allows users to submit a url of an image and returns a picture with all faces identified
     \item Incorporated Clarifai API that receives the url and sends back coordinates for each face location  
-    \item Implemented features such as a full login and registration system which tracks each users submission count 
+    \item Implemented features such as a full login and registration system which also uses Bcrypt to hash passwords before storing in PostgreSQL database. The system also tracks each users submission count every time they log in and submit an image
    \end{itemize}
   }
   \cventry{Aug 2018 - Oct 2018}{Turtle Traveler}{Personal}{}{}{
    \begin{itemize}
-    \item Developed frontend website where users could select given airports and find the shortest distance from each entry point
+    \item Developed frontend website using HTML, CSS and Bootstrap 4 where users could select given airports and find the shortest distance from each entry point
     \item Utilizes Dijkstra's algorithm in Javascript and outputs path to dynamic Bootstrap cards with real world pictures and flight information
    \end{itemize}
  }
 
   \cventry{Nov 2018 }{StudyWITus}{HackWITus, Hackathon}{}{}{
    \begin{itemize}
-    \item Constructed full front end web application that allows students to set up specific study sessions with other students all around campus
-    \item Led a team of four others to develop system within a 24 hour time frame and place 2\textsuperscript{nd} overall
+    \item Constructed full front end web application incorporating Bootstrap 4 and Javascript. The app allows students to set up specific study sessions with other students all around campus
+    \item Led a team of four others to develop system within a 24 hour time frame and place 2\textsuperscript{nd} 
   \end{itemize}
  }
-\section{Experience}
-  \cventry{Jun 2018 -- Present}{Assistant Researcher}{Department of Computer Science}{Montclair, NJ}{}{
-    \begin{itemize}
-      \item Devised main Deep Feedforward Neural Network to accurately detect up to four intrusions on time series data with a 98\% verification score
-      \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow API and Keras API in Python
-      \item Expedited development of algorithm by gathering large collections of viable data and preprocessing data for compatibility
-    \end{itemize}
- }
- \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
-   \begin{itemize}
-    \item Streamlined IT operations across 3 different store locations; created a network of printers, cash registers and other devices that enhanced operations by reducing technical-related downtime and easing training of new employees
-    \item Increased sales by attending trade shows; generated a leads list that increased foot traffic in the store, advertised favorable terms and product offerings to attract customers away from competitors
-  \end{itemize}
- }
+
+
 
 \end{document}
