added DZ50 script

--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -38,7 +38,7 @@
 \section{Education}
   \cventry{Sep 2016 - May 2020}{Computer Science}{Montclair State University}{Montclair, NJ}{}{
     \begin{itemize}
-       \item Computer Club, hosts of the annual HackHawk.io Hackathon
+       \item Computer Club, organizer of the annual HackHawk.io Hackathon
        \item Blockchain Club, founding member
      \end{itemize}
   }
@@ -52,8 +52,8 @@
  }
  \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
    \begin{itemize}
-    \item Developed Web Application that keeps track of each employees hours by using Twilio's API to send and receive text messages alerting users to log in time
-    \item Utilizes Google Spreadsheet's API to store each employees hours which is currently used by every employee 
+    \item Developed app that keeps track of each employees hours by using Twilio's API to send and receive text messages alerting employees to reply with logged hours
+    \item Deployed on Heroku and stores all data on Google Spreadsheet's API. Currently being used by 80\% of all employees daily
   \end{itemize}
 }
 \section{Skills} 
