--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -38,8 +38,8 @@
 \section{Education}
   \cventry{Sep 2016 - May 2020}{Computer Science}{Montclair State University}{Montclair, NJ}{}{
     \begin{itemize}
-       \item Computer Club, organizer of the annual HackHawk.io Hackathon
-       \item Blockchain Club, founding member
+       \item Computer Club, lead organizer of the Montclair's annual HackHawk.io Hackathon
+       \item Blockchain Club, founding member and event organizer
      \end{itemize}
   }
 \section{Experience}
@@ -52,8 +52,8 @@
  }
  \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
    \begin{itemize}
-    \item Developed app that keeps track of each employees hours by using Twilio's API to send and receive text messages alerting employees to reply with logged hours
-    \item Deployed on Heroku and stores all data on Google Spreadsheet's API. Currently being used by 80\% of all employees daily
+    \item Developed system to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets
+    \item Engineered in Javascript and reduced total hour logging errors by 90\%, also currently being used by all employees
   \end{itemize}
 }
 \section{Skills} 
