updated research assistant section

--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -47,12 +47,12 @@
     \begin{itemize}
       \item Devised main Deep Feedforward Neural Network to accurately detect up to four intrusions on time series data with a 98\% verification score 
       \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow API and Keras API in Python
-      \item Expedited development of algorithm by gathering large collections of viable data and preprocessing data for compatibility
+      \item Expedited development of algorithm by gathering large collections of viable datasets and preprocessing 85\% of data for optimal compatibility
     \end{itemize}
  }
  \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
    \begin{itemize}
-    \item Developed system to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets
+    \item Developed system to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets with daily and bi-weekly alerts
     \item Engineered in Javascript and reduced total hour logging errors by 90\%, also currently being used by all employees
   \end{itemize}
 }
