--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -45,7 +45,7 @@
 \section{Experience}
   \cventry{Jun 2018 -- Present}{Assistant Researcher}{Department of Computer Science}{Montclair, NJ}{}{
     \begin{itemize}
-      \item Devised main Deep Feedforward Neural Network to accurately detect up to four intrusions on time series data with a 98\% verification score 
+      \item Devised main Deep Feedforward Neural Network to accurately detect up to four intrusions on network time series data with a 98\% verification score 
       \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow API and Keras API in Python
       \item Expedited development of algorithm by gathering large collections of viable datasets and preprocessing 85\% of data for optimal compatibility
     \end{itemize}
@@ -53,7 +53,7 @@
  \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
    \begin{itemize}
     \item Developed system to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets with daily and bi-weekly alerts
-    \item Engineered in Javascript and reduced total hour logging errors by 90\%, also currently being used by all employees
+    \item Reduced total hour logging errors by 90\%, also currently being used by all employees completely engineered in Javascript
   \end{itemize}
 }
 \section{Skills} 
@@ -65,7 +65,7 @@
    \begin{itemize}
     \item Engineered full stack website using React, Node, Express and PostgreSQL. The application allows users to submit a url of an image and returns a picture with all faces identified
     \item Incorporated Clarifai API that receives the url and sends back coordinates for each face location  
-    \item Implemented features such as a full login and registration system which also uses Bcrypt to hash passwords before storing in PostgreSQL database. The system also tracks each users submission count every time they log in and submit an image
+    \item Implemented features such as a full login and registration system which utilizes Bcrypt to hash passwords before storing in PostgreSQL database. The system also tracks each users submission count every time they log in and submit an image
    \end{itemize}
   }
   \cventry{Aug 2018 - Oct 2018}{Turtle Traveler}{Personal}{}{}{
