--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -39,21 +39,22 @@
   \cventry{Sep 2016 - May 2020}{Computer Science}{Montclair State University}{Montclair, NJ}{}{
     \begin{itemize}
        \item Computer Club, lead organizer of the Montclair's annual HackHawk.io Hackathon
-       \item Blockchain Club, founding member and event organizer
+       \item Blockchain Club, founding member 
      \end{itemize}
   }
 \section{Experience}
   \cventry{Jun 2018 -- Present}{Assistant Researcher}{Department of Computer Science}{Montclair, NJ}{}{
     \begin{itemize}
       \item Devised main Deep Feedforward Neural Network to accurately detect up to four intrusions on network time series data with a 98\% verification score 
-      \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow API and Keras API in Python
-      \item Expedited development of algorithm by gathering large collections of viable datasets and preprocessing 85\% of data for optimal compatibility
+      \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow and Keras API with Jupyter Notebook and Python
+      \item Expedited development of algorithm by gathering large collections of viable datasets and preprocessing data for training and testing 
     \end{itemize}
  }
  \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
    \begin{itemize}
-    \item Developed system to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets with daily and bi-weekly alerts
-    \item Reduced total hour logging errors by 90\%, also currently being used by all employees completely engineered in Javascript
+    \item Developed system in Javascript to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets with daily and bi-weekly alerts
+    \item Reduced hour logging errors by 95\% and currently being used by all employees
+    \item Streamlined IT operations across 3 different store locations; created a network of printers, cash registers and other devices that enhanced operations by reducing technical-related downtime 
   \end{itemize}
 }
 \section{Skills} 
@@ -65,7 +66,7 @@
    \begin{itemize}
     \item Engineered full stack website using React, Node, Express and PostgreSQL. The application allows users to submit a url of an image and returns a picture with all faces identified
     \item Incorporated Clarifai API that receives the url and sends back coordinates for each face location  
-    \item Implemented features such as a full login and registration system which utilizes Bcrypt to hash passwords before storing in PostgreSQL database. The system also tracks each users submission count every time they log in and submit an image
+    \item Implemented features such as tracking entry count, a full login and registration system which utilizes Bcrypt to hash passwords before storing in PostgreSQL database
    \end{itemize}
   }
   \cventry{Aug 2018 - Oct 2018}{Turtle Traveler}{Personal}{}{}{
