Suggestions on resume
Seems like you didn't commit your most recent changes. Still, check the comments for feedback.

--- a/Aadil Glasswala Resume.tex
+++ b/Aadil Glasswala Resume.tex
@@ -38,7 +38,7 @@
 \section{Education}
   \cventry{Sep 2016 - May 2020}{Computer Science}{Montclair State University}{Montclair, NJ}{}{
     \begin{itemize}
-       \item Computer Club, lead organizer of the Montclair's annual HackHawk.io Hackathon
+       \item Computer Club, lead organizer of HackHawk.io %<----make this a link
        \item Blockchain Club, founding member 
      \end{itemize}
   }
@@ -47,37 +47,36 @@
     \begin{itemize}
       \item Devised main Deep Feedforward Neural Network to accurately detect up to four intrusions on network time series data with a 98\% verification score 
       \item Designed multiple Recurrent Neural Networks for classification and regression tasks with Google's Tensorflow and Keras API with Jupyter Notebook and Python
-      \item Expedited development of algorithm by gathering large collections of viable datasets and preprocessing data for training and testing 
+      \item Expedited development of algorithm by gathering large collections of viable datasets and preprocessing data for training and testing %<--- can you say by how much you expedited it? If not might want to exclude "I was a data gopher" as an accomplishment.
     \end{itemize}
  }
  \cventry{Jul 2016 -- Present}{Formalwear Specialist}{Dante Tuxedo}{Verona, NJ}{}{
    \begin{itemize}
-    \item Developed system in Javascript to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets with daily and bi-weekly alerts
-    \item Reduced hour logging errors by 95\% and currently being used by all employees
-    \item Streamlined IT operations across 3 different store locations; created a network of printers, cash registers and other devices that enhanced operations by reducing technical-related downtime 
+    \item Developed system in Javascript to keep track of employee hours by sending out daily messages using Twilio's API and storing data in Google Sheets with daily and bi-weekly alerts. This reduced hour logging errors by 95\% and remains in use by all employees.
+    \item Streamlined IT operations across 3 different store locations; created a network of printers, cash registers and other devices that enhanced operations by reducing technical-related downtime. %<---- ideally I want to see this expressed as a metric, or a series of metrics. Attaching numbers makes it more concrete. Otherwise it sounds like empty boasting.
   \end{itemize}
 }
 \section{Skills} 
   \cvline{Languages:}{Java, Python, Javascript, HTML, CSS}
   \cvline{Tools:}{React.js, Node.js, Express.js, PostgreSQL, Git/GitHub}
 
-\section{Projects}
+\section{Projects} 
   \cventry{Aug 2018 - Nov 2018}{Face Detection App}{Personal}{}{}{
-   \begin{itemize}
+   \begin{itemize} %<------ give me a link to source if you have one, cut some of the description if you need space.
     \item Engineered full stack website using React, Node, Express and PostgreSQL. The application allows users to submit a url of an image and returns a picture with all faces identified
     \item Incorporated Clarifai API that receives the url and sends back coordinates for each face location  
     \item Implemented features such as tracking entry count, a full login and registration system which utilizes Bcrypt to hash passwords before storing in PostgreSQL database
    \end{itemize}
   }
   \cventry{Aug 2018 - Oct 2018}{Turtle Traveler}{Personal}{}{}{
-   \begin{itemize}
+   \begin{itemize} %<------ same as above
     \item Developed frontend website using HTML, CSS and Bootstrap 4 where users could select given airports and find the shortest distance from each entry point
     \item Utilizes Dijkstra's algorithm in Javascript and outputs path to dynamic Bootstrap cards with real world pictures and flight information
    \end{itemize}
  }
 
   \cventry{Nov 2018 }{StudyWITus}{HackWITus, Hackathon}{}{}{
-   \begin{itemize}
+   \begin{itemize} %<---- ditto, where projects are concerned its better to show than tell if you can.
     \item Constructed full front end web application incorporating Bootstrap 4 and Javascript. The app allows students to set up specific study sessions with other students all around campus
     \item Led a team of four others to develop system within a 24 hour time frame and place 2\textsuperscript{nd} 
   \end{itemize}
